Revision history for Perl extension Geo::ReadGRIB.

0.01  Fri Apr 21 05:45:54 2006
	- original version; created by h2xs 1.23 with options
		-X -b 5.6.0 -n Geo::ReadGRIB

0.40  Sat May 27

        - Added a tempfile() method based on File::Tmp to name
          temp filed so had to change Perl version to "use 5.6.1"
        - Each method that uses wgrib.exe now uses tempfile() to
          name temp files and then removes them when done. 
	- Changed tests to use full path to test GRIB file
	- POD doc tweaks	 

0.50  June 12

        - New method extractLaLo() extracts forecast data for a given
          type and time for a range of locations. The locations will be
          all (lat, long) points in the GRIB file inside the rectangular
          area defined by (lat1, long1) and (lat2, long2) where lat1
          >= lat2 and long1 <= long2.  - that is, lat1 is north or lat2
          and long1 is west of long2 (or the same as...)

0.51  July 10 2006

        - Added END block and signal handlers to clean up temp files on
          close or interruptions.
        - Added new method getParam() to return values of selected 
          parameters useful to users.  

0.98  March 6 2009

        - Added Geo::ReadGRIB::Place and Geo::ReadGRIB::PlaceIterator
          classes.
        - extractLaLo() now returns a PlaceIterator object;  
        - Deprecated getCatalog() and getCatalogVerbose(). Getting the 
          offset index for each data type and time is now done during 
          object creation.

0.99  Oct 2009

        - A major bug fix release to support Canadian high res gribs.
        - Add a check for GDS byte 6 = 0. Croak if not (yet) supported
          lat/long grid
        - Discover scan mode from byte 28. Many changes to support south
          to north scanning. Some refactoring and new tests. 