@@ -44,4 +44,8 @@ Revision history for Perl extension Geo::ReadGRIB.
         - Add a check for GDS byte 6 = 0. Croak if not (yet) supported
           lat/long grid
         - Discover scan mode from byte 28. Many changes to support south
-          to north scanning. Some refactoring and new tests. 
+          to north scanning. Will also print advisory messages if it 
+          detects as yet unsupported modes.
+        - Some refactoring and new tests. 
+        - extract() now returns a PlaceIterator object like extractLaLo
+          does.  
